--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -18,47 +18,77 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginBottom="16dp" />
 
-    <EditText
-        android:id="@+id/titleEditText"
+    <!-- Title Input -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/titleLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Title"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/transactionInfoText" />
+        app:layout_constraintTop_toBottomOf="@id/transactionInfoText">
 
-    <EditText
-        android:id="@+id/categoryEditText"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/titleEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Category Input -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/categoryLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Category"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleEditText"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/titleLayout"
+        android:layout_marginTop="16dp">
 
-    <EditText
-        android:id="@+id/amountEditText"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/categoryEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Amount Input -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/amountLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Amount"
-        android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/categoryEditText"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/categoryLayout"
+        android:layout_marginTop="16dp">
 
-    <EditText
-        android:id="@+id/descriptionEditText"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/amountEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Description Input -->
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/descriptionLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Description"
-        android:inputType="date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/amountEditText"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintTop_toBottomOf="@id/amountLayout"
+        android:layout_marginTop="16dp">
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/descriptionEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!-- Transaction Type Label -->
     <TextView
         android:id="@+id/transactionTypeLabel"
         android:layout_width="wrap_content"
@@ -66,9 +96,10 @@
         android:text="@string/select_transaction_type"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/descriptionEditText"
+        app:layout_constraintTop_toBottomOf="@id/descriptionLayout"
         android:layout_marginTop="16dp"/>
 
+    <!-- Transaction Type RadioGroup -->
     <RadioGroup
         android:id="@+id/transactionTypeRadioGroup"
         android:layout_width="wrap_content"
@@ -91,6 +122,7 @@
             android:text="@string/profit" />
     </RadioGroup>
 
+    <!-- Save Transaction Button -->
     <Button
         android:id="@+id/saveTransactionButton"
         android:layout_width="0dp"
@@ -102,6 +134,7 @@
         app:layout_constraintEnd_toStartOf="@id/cancelTransactionButton"
         android:layout_marginEnd="8dp"/>
 
+    <!-- Cancel Transaction Button -->
     <Button
         android:id="@+id/cancelTransactionButton"
         android:layout_width="0dp"
@@ -112,4 +145,5 @@
         app:layout_constraintStart_toEndOf="@id/saveTransactionButton"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="8dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
