--- a/app/src/main/res/layout/fragment_set_budget.xml
+++ b/app/src/main/res/layout/fragment_set_budget.xml
@@ -18,47 +18,39 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginBottom="16dp" />
 
-    <TextView
-        android:id="@+id/budgetLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/budget_amount"
-        android:textSize="16sp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/budgetInfoText"/>
-
-    <EditText
-        android:id="@+id/budgetInput"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/budgetInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/enter_budget"
-        android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/budgetLabel"
-        android:layout_marginTop="8dp"/>
+        app:layout_constraintTop_toBottomOf="@id/budgetInfoText"
+        android:layout_marginTop="8dp">
 
-    <TextView
-        android:id="@+id/periodLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/period_value"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/budgetInput"
-        android:layout_marginTop="16dp"/>
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/budgetInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/periodInput"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/periodInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/enter_period_value"
-        android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/periodLabel"
-        android:layout_marginTop="8dp"/>
+        app:layout_constraintTop_toBottomOf="@id/budgetInputLayout"
+        android:layout_marginTop="8dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/periodInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
         android:id="@+id/periodTypeLabel"
@@ -67,7 +59,7 @@
         android:text="@string/select_period_type"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/periodInput"
+        app:layout_constraintTop_toBottomOf="@id/periodInputLayout"
         android:layout_marginTop="16dp"/>
 
     <RadioGroup
@@ -119,4 +111,5 @@
         app:layout_constraintStart_toEndOf="@id/submitBudgetButton"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="8dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
