--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:menu="@menu/bottom_nav_bar" />
+        app:menu="@menu/bottom_nav_bar"
+        app:itemActiveIndicatorStyle="@color/colorBackground"
+        app:backgroundTint="@color/colorSecondary"
+        app:itemIconTint="@color/colorPrimary"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
