--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -65,4 +65,27 @@
         app:layout_constraintTop_toBottomOf="@id/userNameLabel"
         android:layout_marginTop="32dp" />
 
+    <ImageView
+        android:id="@+id/indicatorContactDeveloper"
+        android:layout_width="34dp"
+        android:layout_height="46dp"
+        android:layout_marginEnd="12dp"
+        android:contentDescription="@string/icon"
+        android:src="@drawable/ic_contact_developer"
+        app:layout_constraintBottom_toBottomOf="@id/contactDeveloperLabel"
+        app:layout_constraintEnd_toStartOf="@+id/contactDeveloperLabel"
+        app:layout_constraintTop_toTopOf="@id/contactDeveloperLabel"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/contactDeveloperLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/contact_developer"
+        android:textSize="24sp"
+        android:layout_marginStart="64dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logoutLabel"
+        android:layout_marginTop="32dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
